2013-12-28 John Wu <John dot Wu at ACM dot org>
	* src/resource.h, src/resource.cpp: modify function resource::read
	to return an error code instead of printing out warning messages
	because the mechanism for printing message could invoke to
	function ibis::gParameter which causes recursive calls to a static
	constructor in ibis::gParameter

2013-12-27 John Wu <John dot Wu at ACM dot org>
	* src/resource.h: change the default constructor to invoke
	function read as promised in the class documentation

2013-12-09 John Wu <John dot Wu at ACM dot org>
	* src/column.cpp: in function loadIndex change
	disableIndexOnFailure to retryIndexOnFailure, i.e., the change the
	default option to not retry index building
	* src/column.cpp: change searchSortedICC and searchSortedICD to
	use ibis::util::find instead of the simple binary search function,
	allow each id to be matches with multiple rows

2013-12-04 John Wu <John dot Wu at ACM dot org>
	* src/whereClause.cpp: in verifyExpr convert the string value of a
	qString expression to a number if the column named is of a numeric
	type
	* src/utilidor.h, src/utilidor.cpp: add a variation of function
	find that take a starting position, use array values to project
	the expect position instead of using the straightforward binary
	search (have to be separate from the template ibis::array_t
	because there are types of array_t that can not support addition,
	subtraction or casting to double)
	* src/iroster.cpp: change icSearch to use the new ibis::util::find
	instead of simple loops

2013-12-03 John Wu <John dot Wu at ACM dot org>
	* src/column.cpp: in evaluateRange check the cost before
	converting a discrete range to a continuous range
	* src/category.cpp: allow null strings as arguments to
	stringSearch

2013-12-02 John Wu <John dot Wu at ACM dot org>
	* src/iroster.cpp: in icSearch and oocSearch add one more attempt
	to read the .ind file into memory

2013-11-27 John Wu <John dot Wu at ACM dot org>